# src/routes/user.js
@@ -161,3 +161,15 @@ router.get('/badges', loginRequired, async (ctx) => {
 router.get('/impact-points', loginRequired, paginate, async (ctx) => {
   ctx.body = await ImpactPoints.history(ctx.identity.id, ctx.paginate)
 })
+
+router.post('/open-to-work', loginRequired, async (ctx) => {
+  ctx.body = {
+    open_to_work: await User.openToWork(ctx.user.id)
+  }
+})
+
+router.post('/open-to-volunteer', loginRequired, async (ctx) => {
+  ctx.body = {
+    open_to_volunteer: await User.openToVolunteer(ctx.user.id)
+  }
+})
